PicoCLI 4.7.7 is so clean! Nice.